<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/reload"
        android:icon="@android:drawable/stat_notify_sync"
        android:id="@+id/menu_reload"
        android:showAsAction="ifRoom"
        android:orderInCategory="100"
        tools:ignore="AppCompatResource" />
    <item android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/exit_account"
        android:id="@+id/exit_account"
        tools:ignore="AppCompatResource" />
    <item android:orderInCategory="99"
        android:showAsAction="always"
        android:title="@string/new_post"
        android:id="@+id/new_post"
        tools:ignore="AppCompatResource"
        android:icon="@android:drawable/ic_menu_edit" />
    <item android:orderInCategory="100"
        android:showAsAction="never"
        tools:ignore="AppCompatResource"
        android:title="@string/filter"
        android:id="@+id/filter"/>
</menu>
