<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/equalizer"
        android:id="@+id/menu_equalizer"
        tools:ignore="AppCompatResource" />-->
    <item android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/sort"
        android:id="@+id/menu_sort"
        tools:ignore="AppCompatResource" />
    <item android:title="@string/reload"
        android:icon="@android:drawable/stat_notify_sync"
        android:id="@+id/menu_reload"
        app:showAsAction="ifRoom"
        android:orderInCategory="100"/>
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:title="@string/search"
        android:orderInCategory="99"/>
</menu>